Fix Job History filter row alignment and selected states

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -14,3 +14,7 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.job-history-daterange {
+  min-width: 16rem;
+}
